--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.38",
+    "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
-    "vue-router": "^4.2.5",
     "pinia": "^2.1.7",
-    "@vueuse/core": "^10.7.0"
+    "vue": "^3.4.38",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18",
+    "@types/node": "^22.15.18",
     "@vitejs/plugin-vue": "^5.1.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
-    "vue-tsc": "^2.1.4",
-    "tailwindcss": "^3.3.5",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16",
-    "@headlessui/vue": "^1.7.16",
-    "@heroicons/vue": "^2.0.18"
+    "vue-tsc": "^2.1.4"
   }
 }
