--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
